<resources>
    <string name="app_name">Benchmarker</string>
    <string name="app_version">Version 0.0.1</string>
    <string name="app_description">Application to run micro-benchmarks on popular Android databases</string>
    <string name="app_author">Author : Koustuv Sinha</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_db_testing">DbTestingActivity</string>

    <string name="source_info">This is an open source app. Contribute to make this app even better at : </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repository_link"><a href="https://github.com/koustuvsinha/benchmarker">github.com/koustuvsinha/benchmarker</a></string>
</resources>
